--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
 						/* Style for project thumbnail image */
 						.project-thumbnail {
 							width: 100%;
-							height: 150px;
+							height: 20vh;
 							object-fit: cover;
 							border-radius: 5px;
 						}
