Updating summary and chatbot prompt

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<div class="text-and-photo">
 							<div class="text-content">
 								<h1>Hi Clay here 👋</h1>
-								<p style="font-size: 0.8em;">27 year old data scientist in the Bay Area, CA</p>
+								<p style="font-size: 0.8em;">I am a Bay Area-based data scientist with a master’s in statistics and over four years of experience. I specialize in statistical modeling, machine learning, and data analysis, with a proven ability to tackle complex, real-world challenges. I am currently seeking new opportunities to apply my expertise and make an impact.</p>
 								<a href="images/Clay Olsen Resume.pdf" download="Clay Olsen Resume.pdf" class="button">
 									<p>Resume
 									<img src="images/download_icon.png" style="width: 20%; height: auto;" alt="Download Icon" class="icon"></p>
@@ -697,7 +697,7 @@
 					display: flex;
 					flex-direction: column;
 					background: #eee; 
-					height: 40vh; /* Height is 50% of the viewport height */
+					height: 50vh; /* Height is 50% of the viewport height */
 					width: 18vw;
 					z-index: -123456;
 					opacity: 0;
