--- a/index.html
+++ b/index.html
@@ -236,6 +236,37 @@
 								</div>
 							</div>
 						</div>
+						<div class="experience">
+							<div class="company-logo-container">
+								<img src="images/seattle_university_logo.png" class="company-logo" alt="Company 2">
+							</div>
+							<div class="experience-details">
+								<p style="font-size: 0.8em;">June 2019 - August 2019</p>
+								<h3>Seattle University</h3>
+								<p>Front Office Desk Assistant</p>
+								<p style="font-size: 0.7em;">
+									<ul>
+									<li>Made appointments and prepared schedules for student advisors</li>
+									<li>Updated records and maintained an organized filing system for student information</li>
+								</ul></p>
+							</div>
+						</div>
+						<div class="experience">
+							<div class="company-logo-container">
+								<img src="images/ctd-logo.png" class="company-logo" alt="Company 2">
+							</div>
+							<div class="experience-details">
+								<p style="font-size: 0.8em;">July 2018 - September 2018</p>
+								<h3>Connect the Dots Ireland</h3>
+								<p>Market Research Intern</p>
+								<p style="font-size: 0.7em;">
+									<ul>
+									<li>Conducted market analysis for new companies in the corporate wellness sector and competitors</li>
+									<li>Participated in case study analysis and displayed data for the wellness activities market</li>
+									<li>Made connections with potential customers and helped coordinate events</li>
+								</ul></p>
+							</div>
+						</div>
 					</div>
 
 				
