added hilo rojo and current job

--- a/index.html
+++ b/index.html
@@ -195,6 +195,35 @@
 					<div id="Tab1" class="tabcontent" style="display: block;">
 						<div class="experience-section">
 							<!-- Vertical line spans the entire section <div class="vertical-line"></div> -->
+
+							<div class="experience">
+								<div class="company-logo-container">
+									<img src="images/falkonry.png" class="company-logo" alt="Company 1">
+								</div>
+								<div class="experience-details">
+									<p style="font-size: 0.8em;">Dec 2024 - Current</p>
+									<h3>Falkonry</h3>
+									<p>Solutions Engineer</p>
+									<p style="font-size: 0.7em;">
+									</p>
+								</div>
+							</div>
+
+							<div class="experience">
+								<div class="company-logo-container">
+									<img src="images/Hilorojo.png" class="company-logo" alt="Company 1">
+								</div>
+								<div class="experience-details">
+									<p style="font-size: 0.8em;">Jul 2024 - Sep 2024</p>
+									<h3>Work/Travel Peru</h3>
+									<p>Volunteer with Hilo Rojo ONG</p>
+									<p style="font-size: 0.7em;">
+										<ul>
+										<li>Developed curriculum and led classes for students with El Hilo Rojo ONG, an organization that provides schooling, food, shelter, and social support for children and their families in Trujillo, Peru</li>
+										<li>Practiced conversational during Spanish Immersion while volunteering and exploring the country</li>
+									</ul></p>
+								</div>
+							</div>
 							
 							<div class="experience">
 								<div class="company-logo-container">
