--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<header id="header" class="alt">
 						<div class="text-and-photo">
 							<div class="text-content">
-								<h1>Hi Clay here 👋</h1>
+								<h1>Hi, Clay here 👋</h1>
 								<p style="font-size: 0.8em;">I am a Bay Area-based data scientist with a master’s in statistics and over four years of experience. I specialize in statistical modeling, machine learning, and data analysis, with a proven ability to tackle complex, real-world challenges. I am currently seeking new opportunities to apply my expertise and make an impact.</p>
 								<a href="images/Clay Olsen Resume.pdf" download="Clay Olsen Resume.pdf" class="button">
 									<p>Resume
@@ -205,6 +205,10 @@
 									<h3>Falkonry</h3>
 									<p>Solutions Engineer</p>
 									<p style="font-size: 0.7em;">
+										<ul>
+											<li>Developing metrics for phasor and power system signals</li>
+											<li>Exploring AI applications for time series data, focusing on fault detection and system monitoring in power systems and other domains</li>
+										</ul>
 									</p>
 								</div>
 							</div>
