Added homework central and berkeley

--- a/index.html
+++ b/index.html
@@ -206,10 +206,26 @@
 									<p>Solutions Engineer</p>
 									<p style="font-size: 0.7em;">
 										<ul>
-											<li>Developing metrics for phasor and power system signals</li>
-											<li>Exploring AI applications for time series data, focusing on fault detection and system monitoring in power systems and other domains</li>
+											<li>Leading development of statistically driven tools for understanding behavioral signals and system feedback across various time series data applications</li>
+												<li></li>Currently enrolled in evening post-baccalaureate coursework in clinical psychology at UC Berkeley Extension; seeking hands-on research experience in behavioral science and human subjects research</li>
+											<li>Collaborating with clients to interpret results, communicate model insights, and train users on data-driven decision making</li>
 										</ul>
 									</p>
+								</div>
+							</div>
+							<div class="experience">
+								<div class="company-logo-container">
+									<img src="images/hmwrkcentral.png" class="company-logo" alt="Company 1">
+								</div>
+								<div class="experience-details">
+									<p style="font-size: 0.8em;">Mar 2025 - June 2025</p>
+									<h3>Homework Central</h3>
+									<p>Volunteer Teacher Assistant</p>
+									<p style="font-size: 0.7em;">
+										<ul>
+										<li>Support 4th–5th grade students in an after-school learning environment, assisting with homework and engagement activities</li>
+										<li>Collaborate with teachers to build positive learning experiences for students from diverse and underserved communities</li>
+									</ul></p>
 								</div>
 							</div>
 
@@ -223,8 +239,8 @@
 									<p>Volunteer with Hilo Rojo ONG</p>
 									<p style="font-size: 0.7em;">
 										<ul>
-										<li>Developed curriculum and led classes for students with El Hilo Rojo ONG, an organization that provides schooling, food, shelter, and social support for children and their families in Trujillo, Peru</li>
-										<li>Practiced conversational during Spanish Immersion while volunteering and exploring the country</li>
+										<li>Designed and led educational programs for children through a community-based NGO focused on education, food security, and shelter</li>
+										<li>Practiced conversational Spanish while volunteering and participating in cultural exchange</li>
 									</ul></p>
 								</div>
 							</div>
@@ -239,12 +255,10 @@
 									<p>Software Engineer, ML Engineering Team</p>
 									<p style="font-size: 0.7em;">
 										<ul>
-										<li>Built 100’s of classification and anomaly detection models to provide warnings and real time feedback for a variety of customer use cases that require deliberation on optimal algorithm selection, hyper-parameter tuning, variable selection, and data cleansing techniques to be applied.</li>
-										<li>Developed and optimized the code pipeline for machine learning products </li>
-										<li>Presented machine learning use cases and collaborated with customers to address a variety of industry needs using Falkonry’s AI platform</li>
-										<li>Utilized AWS cloud platform tools such as boto3, S3, Rancher, Kubernetes, and Docker for the management of a machine learning pipeline for experimental neural network models and product code contributions</li>
-										<li>Developed and implemented geographical models for density estimation and predictive object tracking that was visualized in Kepler using H3 grid data</li>
-										<li>Wrote Python code and used Rest API for automating data engineering tasks, generating reports for sharing findings with customers, and other automatable tasks within a developing application</li>
+										<li>Designed and evaluated hundreds of classification and anomaly detection models using real-world, high-dimensional time series data</li>
+										<li>Developed and tested experimental pipelines for spatial and temporal behavior modeling, including trajectory prediction and density estimation</li>
+										<li>Managed deployment pipelines and cloud-based data infrastructure using Python, REST APIs, and AWS tools</li>
+										<li>Led interactive training sessions with non-technical stakeholders to explain data patterns, modeling decisions, and reliability metrics</li>
 
 									</ul></p>
 
@@ -306,6 +320,20 @@
 					<div id="Tab2" class="tabcontent">
 						<div class="experience-section"></div>
 						 <!-- Vertical line spans the entire section <div class="vertical-line"></div>-->
+						  <div class="experience">
+								<div class="company-logo-container">
+									<img src="images/berkeleyToken.png" class="company-logo" alt="ucsc">
+								</div>
+							<div class="experience-details">
+								<p style="font-size: 0.8em;">June 2025 - Now</p>
+								<h3>University of California Berkeley</h3>
+								<p>Clinical Psychology Post-Baccalaureate</p>
+									<p style="font-size: 0.7em;">
+										<ul>
+										<li>In Progress</li>
+										</ul></p> 
+								</div>
+							</div>
 
 							<div class="experience">
 								<div class="company-logo-container">
@@ -362,7 +390,7 @@
 							/* Ensure .experience is consistently sized */
 							.experience {
 								display: flex;
-								align-items: center;
+								align-items: flex-start;
 								margin-bottom: 20px;
 								position: relative; /* Ensure the vertical line is positioned relative to this container */
 								z-index: 1;
@@ -403,6 +431,7 @@
 								height: auto;
 								flex-shrink: 0;
 								margin-right: 50px; /* Adjust this value to a more reasonable size */
+								margin-top: 20px;
 								position: relative;
 							}
 
