edits to resume and updates

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 						<div class="text-and-photo">
 							<div class="text-content">
 								<h1>Hi, Clay here 👋</h1>
-								<p style="font-size: 0.8em;">I am a Bay Area-based data scientist with a master’s in statistics and over four years of experience. I specialize in statistical modeling, machine learning, and data analysis, with a proven ability to tackle complex, real-world challenges. I am currently seeking new opportunities to apply my expertise and make an impact.</p>
-								<a href="images/Clay Olsen Resume.pdf" download="Clay Olsen Resume.pdf" class="button">
+								<p style="font-size: 0.8em;">I am a Bay Area-based data scientist with a master’s in statistics and over four years of experience. I specialize in statistical modeling, machine learning, and data analysis, with a proven ability to tackle complex, real-world challenges.</p>
+								<a href="images/Clay Olsen Resume_2025.pdf" download="Clay Olsen Resume_2025.pdf" class="button">
 									<p>Resume
 									<img src="images/download_icon.png" style="width: 20%; height: auto;" alt="Download Icon" class="icon"></p>
 								</a>
@@ -206,9 +206,15 @@
 									<p>Solutions Engineer</p>
 									<p style="font-size: 0.7em;">
 										<ul>
-											<li>Leading development of statistically driven tools for understanding behavioral signals and system feedback across various time series data applications</li>
-												<li></li>Currently enrolled in evening post-baccalaureate coursework in clinical psychology at UC Berkeley Extension; seeking hands-on research experience in behavioral science and human subjects research</li>
-											<li>Collaborating with clients to interpret results, communicate model insights, and train users on data-driven decision making</li>
+											<li>Built hundreds of classification and anomaly detection models to provide warnings and real-time feedback for a variety of customer use cases requiring deliberation on optimal algorithm selection, hyper-parameter tuning, variable selection, and data cleansing techniques</li>
+											<li>Utilized AWS cloud platform tools such as boto3, S3, Rancher, Kubernetes, and Docker for the management of a machine learning pipeline for experimental neural network models and product code contributions, and added unit tests to prevent future breakdowns</li>
+											<li>Developed and implemented geospatial models for density estimation and predictive object tracking that were visualized in Kepler using H3 grid data</li>
+											<li>Wrote Python code and used REST API for automating data engineering tasks, generating reports for sharing findings with customers, and other automatable tasks within a developing application</li>
+											<li>Developed a scripting pipeline utilizing APIs to automate customer report generation for fault summaries</li>
+											<li>Presented machine learning use cases and collaborated with customers to address a variety of industry needs using Falkonry’s AI platform</li>
+											<li>Led the ML Engineering team for several customer model development projects</li>
+											<li>Ran customer team training in AI concepts and the management of machine learning models</li>
+
 										</ul>
 									</p>
 								</div>
@@ -223,7 +229,7 @@
 									<p>Volunteer Teacher Assistant</p>
 									<p style="font-size: 0.7em;">
 										<ul>
-										<li>Support 4th–5th grade students in an after-school learning environment, assisting with homework and engagement activities</li>
+										<li>Support 3rd–5th grade students in an after-school learning environment, assisting with homework and engagement activities</li>
 										<li>Collaborate with teachers to build positive learning experiences for students from diverse and underserved communities</li>
 									</ul></p>
 								</div>
@@ -330,7 +336,9 @@
 								<p>Clinical Psychology Post-Baccalaureate</p>
 									<p style="font-size: 0.7em;">
 										<ul>
-										<li>In Progress</li>
+										<li>Complete Courses: Developmental Psychology</li>
+										<li>In Progress: Psychology of Personality</li>
+										<li>Upcoming Courses: Biological Psychology, Cognitive Psychology, Research Methods, Abnormal Psychology</li>
 										</ul></p> 
 								</div>
 							</div>
