typos in education

--- a/index.html
+++ b/index.html
@@ -336,9 +336,10 @@
 								<p>Clinical Psychology Post-Baccalaureate</p>
 									<p style="font-size: 0.7em;">
 										<ul>
-										<li>Complete Courses: Developmental Psychology</li>
+										<li>Completed Courses: Developmental Psychology</li>
 										<li>In Progress: Psychology of Personality</li>
 										<li>Upcoming Courses: Biological Psychology, Cognitive Psychology, Research Methods, Abnormal Psychology</li>
+										<li>Cumulative GPA: 4.0</li>
 										</ul></p> 
 								</div>
 							</div>
