added rossmo formula

--- a/index.html
+++ b/index.html
@@ -615,8 +615,14 @@
 							<h3 class="project-title">A Bayesian Bivariate Probit Model For Phase I-II Dose Finding Trials</h3>
 							<p class="project-description">A single model-based, early-phase trial design can be utilized to simultaneously account for efficacy and toxicity. We used a bivariate probit design to model the binary outcomes of efficacy and toxicity under a Bayesian framework while accounting for potential dependencies between dose-efficacy and dose-toxicity. We evaluate dose levels with an intuitive utility function, proposed in Liu and Johnson [2016], that accounts for desired trade-offs between efficacy and toxicity.</p>
 						</div>
+
+						<div class="project-box" onclick="window.open('https://github.com/ClaytonOlsen/Rossmo_Formula_GIS', '_blank')">
+							<img src="images/illustration-of-serial-killer.jpg" alt="Capstone" class="project-thumbnail">
+							<h3 class="project-title">Geographic Profiling Serial Killers with Rossmo's Formula</h3>
+							<p class="project-description">If someone is committing crimes around a major city on a regular basis, what is an effective way of finding this person? One way to go about this is to try to find patterns among crime scene locations and make a prediction about where the next one will be. This can be tricky though, because there is likely a large amount of randomness in where a serial offender chooses to commit a crime. In 1996, a criminologist named Kim Rossmo suggested that, instead of trying to predict the location of the next crime, we can try to find out where the culprit lives. Kim Rossmo put forth a formula suggesting the pattern of crime locations is likely correlated with the location of a criminal's home, thus using geographic information about the crime scenes, we can make a prediction on the location of the criminal's home.</p>
+						</div>
 				
-						<div class="project-box" onclick="window.open('https://github.com/ClaytonOlsen/HaikuTransformer', '_blank')">
+						<div class="project-box hidden" onclick="window.open('https://github.com/ClaytonOlsen/HaikuTransformer', '_blank')">
 							<img src="images/HaikuProject.png" alt="Haiku Project" class="project-thumbnail">
 							<h3 class="project-title">Haiku Transformer</h3>
 							<p class="project-description">This repository contains a transformfer model following the infrastrucutre presented in Attention is All You Need paper to produce lines of text in the form of 3 line poems from scratch. The dataset used was statworx/haiku from huggingface. The dataset consists of mostly haikus in the 5-7-5 syllable structure, but there are many unstructured 3 line poems in the mix.
